feat: add column name into users table
